<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/nameFood"
        android:layout_width="200dp"
        android:layout_height="39dp"
        android:layout_alignLeft="@+id/descriptionFood"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/descriptionFood"
        android:hint="@string/hintName"
        android:textColor="@color/textColor" />

    <EditText
        android:id="@+id/descriptionFood"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nameFood"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hintDesc"
        android:textColor="@color/textColor" />
    <EditText
        android:id="@+id/priceFood"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/descriptionFood"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hintPrice"
        android:textColor="@color/textColor" />

    <EditText
        android:id="@+id/idFood"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/priceFood"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hintId"
        android:textColor="@color/textColor" />

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nameFood"
        android:layout_alignStart="@+id/nameFood"
        android:layout_below="@+id/idFood"
        android:layout_marginTop="73dp"
        android:text="@string/textButton" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignBaseline="@+id/buttonCreate"
        android:layout_alignBottom="@+id/buttonCreate"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/buttonCreate"
        android:layout_toRightOf="@+id/buttonCreate"
        android:text="@string/buttonDelete" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonDelete"
        android:layout_alignBottom="@+id/buttonDelete"
        android:layout_toEndOf="@+id/nameFood"
        android:layout_toRightOf="@+id/nameFood"
        android:text="@string/buttonUpdate"
        android:id="@+id/buttonUpdate" />

    <Button
        android:id="@+id/buttonSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/buttonUpdate"
        android:layout_alignLeft="@+id/buttonCreate"
        android:layout_alignRight="@+id/buttonUpdate"
        android:layout_alignStart="@+id/buttonCreate"
        android:layout_below="@+id/buttonCreate"
        android:layout_marginTop="20dp"
        android:text="@string/buttonSelct" />



</RelativeLayout>


